--- a/packages/electron-state-ipc/tsconfig.react.json
+++ b/packages/electron-state-ipc/tsconfig.react.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "incremental": true,
     "target": "es2017",
-    "outDir": ".",
+    "outDir": "../../",
     "rootDir": "src",
     "moduleResolution": "node",
     "module": "commonjs",
