--- a/package.json
+++ b/package.json
@@ -1,66 +1,18 @@
 {
-  "name": "electron-state-ipc",
-  "version": "1.0.0",
-  "description": "Easily synchronize state between main process and renderer in Electron, using your favorite UI framework (React, Vue, Angular)",
-  "main": "build/main/index.js",
-  "typings": "build/main/index.d.ts",
-  "module": "build/module/index.js",
-  "repository": "https://github.com/morintd/electron-state-ipc",
-  "license": "MIT",
-  "keywords": [],
-  "scripts": {
-    "build": "yarn build:main && yarn build:module && yarn build:react",
-    "build:main": "tsc -p tsconfig.json",
-    "build:module": "tsc -p tsconfig.module.json",
-    "build:react": "tsc -p tsconfig.react.json",
-    "tsc": "tsc --noEmit",
-    "lint": "eslint src --ext .ts",
-    "test": "jest",
-    "test:coverage": "jest --coverage",
-    "prepare": "husky install",
-    "clean": "rm -rf build react tsconfig.react.tsbuildinfo"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "13.2.1",
-    "@commitlint/config-conventional": "13.2.0",
-    "@semantic-release/changelog": "6.0.0",
-    "@semantic-release/commit-analyzer": "9.0.1",
-    "@semantic-release/npm": "8.0.2",
-    "@semantic-release/release-notes-generator": "10.0.2",
-    "@types/jest": "27.0.2",
-    "@types/node": "16.11.6",
-    "@types/react": "17.0.33",
-    "@typescript-eslint/eslint-plugin": "5.2.0",
-    "@typescript-eslint/parser": "5.2.0",
-    "cspell": "5.12.3",
-    "cz-conventional-changelog": "3.3.0",
-    "eslint": "7.32.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-config-standard": "16.0.3",
-    "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-jest": "25.2.2",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-promise": "5.1.1",
-    "eslint-plugin-react": "7.26.1",
-    "eslint-plugin-testing-library": "5.0.0",
-    "husky": "6.0.0",
-    "jest": "27.3.1",
-    "lint-staged": "11.2.6",
-    "prettier": "2.4.1",
-    "ts-jest": "27.0.7",
-    "typescript": "4.4.4"
-  },
-  "files": [
-    "build/main",
-    "build/module",
-    "react",
-    "!**/*.spec.*",
-    "!**/*.json",
-    "CHANGELOG.md",
-    "LICENSE",
-    "README.md"
+  "name": "root",
+  "private": true,
+  "workspaces": [
+    "packages/**"
   ],
+  "scripts": {
+    "build": "yarn workspace electron-state-ipc build",
+    "tsc": "yarn workspace electron-state-ipc tsc",
+    "lint": "eslint packages --ext .ts --ext .tsx",
+    "test": "yarn workspace electron-state-ipc jest",
+    "test:coverage": "yarn workspace electron-state-ipc jest --coverage",
+    "prepare": "husky install",
+    "clear": "yarn workspaces run clear && rimraf build react node_modules"
+  },
   "config": {
     "commitizen": {
       "path": "cz-conventional-changelog"
@@ -70,10 +22,5 @@
     "*.{ts,tsx}": [
       "eslint --fix"
     ]
-  },
-  "dependencies": {
-    "classnames": "^2.3.1",
-    "electron": "15.3.0",
-    "react": "17.0.2"
   }
 }
