--- a/tsconfig.lint.json
+++ b/tsconfig.lint.json
@@ -5,5 +5,5 @@
     "outDir": "build/module",
     "module": "esnext"
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "./global.d.ts"]
+  "include": ["packages/**/*"]
 }
