--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -32,7 +32,8 @@
         {
           "name": "@electron-forge/maker-zip",
           "platforms": [
-            "darwin"
+            "darwin",
+            "linux"
           ]
         },
         {
