--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,9 +53,7 @@ jobs:
       - attach_workspace:
           at: ~/repo
       - run: cd packages/example && yarn package
-      # - run: cd packages/example && yarn e2e
-      - store_artifacts:
-          path: packages/example/out
+      - run: cd packages/example && yarn e2e
   release:
     <<: *setup
     steps:
